CSS/style.css
@import url('https://fonts.googleapis.com/css2??family=Nunito:wght@200&family=Montserrat&family=Open+Sans&family=Raleway&display=swap');
*{
  margin: 0;
  padding: 0;
}

.welcome-photo-container{
  width: 100%;
  height: 1022px;
  background-color: #d7d7d7;
}

.content-container{
  display: flex;
  flex-direction: row;
  margin-left: 14.5%;
  margin-right: 14.5%;
  width: 71%;
  z-index: 99;
  max-width: 1376px;
}

.content-container-item{
  margin-top: 60px;
  width: 50%;
}

.intro-bio{
  margin-top: 229px;
  font-family: 'Raleway', sans-serif;

}

.intro-bio h3{
  font-size: 40px;
  font-weight: 700;
  line-height: 47px;
}

.intro-bio h1{
  font-size: 80px;
  margin-top: 54px;
  font-weight: 700;
  line-height: 94px;
}
.intro-bio h5{
  font-size: 25px;
  font-weight: 800px;
  line-height: 30px;
  color: #919191;
}

.contact-container{
  display: flex;
  margin-top: 126px;
}

.contact-item{
  width: 61px;
  height: 56px;
  background-color: #c4c4c4;
  margin-right: 31px;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.navbar{
  display: flex;
  align-items: center;
  justify-content: space-around;
}
.navbar-item{
  padding: 8px 5px;
  width: 147px;
  text-align: center;
  font-family: 'Montserrat', sans-serif;
  font-size: 17px;
  line-height: 20px;
  border-radius: 30px;
}


a:hover{
  background-color: white;
  border: 4px solid #ffffff;
}

.inner-icon{
  width: 35px;
  height: 35px;
  margin-top: 11px;
  margin-left: 14px;
}

.bio-description-container{
  width: 100%;
  color: white;
  background: linear-gradient(90.18deg, #1D1D1D 31.74%, #1D1D1D 90.49%, #1D1D1D 90.49%);
}

.description-section{
  width: 60%;
  max-width: 1148px;
  margin-left: 5%;
  padding-top: 54px;
}
@media only screen and (max-width: 1300px) {
  .content-container{
    width: 100%;
    flex-direction: column-reverse;
    margin: 0;
  }
  .navbar-item {
    font-size: 14px;
  }
  .intro-bio{
    margin-top: 100px;
  }
  .content-container-item{
    width: 70%;
  }
  .description-section{
    width: 100%;
  }
}

.description-section h2{
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  font-size: 30px;
  line-height: 36px;
  letter-spacing: .1853rem;
}

.description{
  margin-top: 62px;
  font-family: 'Open Sans', sans-serif;
}

.button-wrapper{
  margin-top: 26px;
  padding-bottom: 50px;
}

.side-bordered-button{
  width: fit-content;
  padding: 0 20px;
  border-left: white solid 2px;
  border-right: white solid 2px;
  font-family: 'Montserrat', sans-serif;
  font-weight: 600;
  font-size: 15px;
  line-height: 18px;
}

.technologies-section{
  background: radial-gradient(50% 50% at 50% 50%, rgba(26, 21, 21, 0) 0%, rgba(1, 1, 1, 0.16) 100%), #FFFFFF;
mix-blend-mode: normal;
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.technologies-container{
  width: 52%;
}

.skills-container{
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  align-content: center;
}

.bordered-big-box{
  width: 404px;
  height: 107px;
  border: 8px solid #000000;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 142px;
}

.box-title{
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  font-size: 30px;
  line-height: 38px;
  text-align: center;
  letter-spacing: .35538rem;
  color: #000000;
}

.expertise-container{
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  margin-top: 109px;
  justify-content: center;
}

.expertise-item{
  width: 40%;
  max-width: 431px;
  margin: 10px 15px;
}

.expertise-item h3{
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  font-size: 22px;
  line-height: 27px;
  text-align: center;
  letter-spacing: 0.18rem;
}

.expertise-item p{
  font-family: 'Open Sans' sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 19px;
  text-align: center;
}


.technology-icons-section h2{
  font-family: 'Montserrat', sans-serif;
  font-size: 30px;
  line-height: 37px;
  letter-spacing: .18rem;
  color: #000000;
}

.icons-container{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: center;
  align-content: center;
}

.icon-technology{
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 120px;
  width: 100px;
  margin: 30px;
}

.icon-technology p{
  text-align: center;
  font-family: 'Montserrat', sans-serif;
  font-size: 24px;
  line-height: 29px;
  letter-spacing: .13rem;
  font-weight: normal;
  color: #000000;
}

.projects-container{
  width: 100%;
  background-color: red;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-image: url("https://www.lugaresturisticosdeveracruz.com/wp-content/uploads/2018/04/Cordoba-Veracruz.jpg");
  background-repeat: no-repeat;
  background-size: contain;
  object-fit: contain;
}
.projects-card-container{
  background-color: red;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
}
.project-card{
  min-height: 400px;
  background-repeat: no-repeat;
  background-size: cover;
  width: 50%;
}


#edfry-delivery{
  background-image: url("https://images.unsplash.com/photo-1595060939429-ed011b26de39?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80");
}

#deal-perch{
  background-image: url("https://images.unsplash.com/photo-1556740714-a8395b3bf30f?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2700&q=80");
}

#micro-controller{
  background-image: url("https://images.unsplash.com/photo-1596658591534-591d75e2f2f7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2851&q=80");
}

#book-finder{
  background-image: url("https://images.unsplash.com/photo-1519682337058-a94d519337bc?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80");
}
.footer{
  width: 100%;
  background-color: #1a1a1a;
  width: 100%;
}

.footer-content{
  color: white;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
}

.margin-small{
  margin-top: 20px;
}

.contact-items{
  display: flex;
}

.contact-icon{
  margin: 0 10px;
}

.back-to-top{
  font-family: 'Montserrat', sans-serif;
  font-size: 15px;
  line-height: 18px;
  letter-spacing: 0.1853rem;
}

.copy-rights{
  font-size: 18px;
  line-height: 25px;
  font-family: 'Nunito', sans-serif;
  margin-bottom: 20px;
   
}

